mainWindow issue was fixed

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" >
 <head th:fragment="headerFragment" >
-    <title th:if="${headerTitle==null}" th:text="${'GRI Lab'}" >Spring boot - Thymeleaf</title >
+    <title th:if="${headerTitle==null}" th:text="${'Success Student'}" >Spring boot - Thymeleaf</title >
     <title th:if="${headerTitle!=null}" th:text="${headerTitle}" >Spring boot - Thymeleaf</title >
     <!-- Required meta tags -->
     <meta charset="utf-8" >
