--- a/src/main/resources/templates/payment/payment.html
+++ b/src/main/resources/templates/payment/payment.html
@@ -55,9 +55,9 @@
 <!--</div>-->
 
 <!--&lt;!&ndash;footer is included&ndash;&gt;-->
-<!--<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>-->
+<!--<div data-th-replace="~{fragments/footer :: footerFragment}"></div>-->
 <!--&lt;!&ndash;script is included&ndash;&gt;-->
-<!--<script data-th-replace="~{fragments/script :: scriptFragment}"></script>-->
+<!--<div data-th-replace="~{fragments/script :: scriptFragment}"></div>-->
 <!--</body>-->
 <!--</html>-->
 
@@ -121,8 +121,8 @@
 </div>
 
 <!--footer is included-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+<div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script is included-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 </body>
 </html>
