--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,11 +7,11 @@
 <body>
 <nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<!--<h1> I am index page</h1>-->
+<h1> I am index page</h1>
 
 <div  th:replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
-<script th:replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 
 </body>
 </html>
