--- a/src/main/resources/templates/payment/addPayment.html
+++ b/src/main/resources/templates/payment/addPayment.html
@@ -104,9 +104,9 @@
 <!--</div>-->
 
 <!--&lt;!&ndash;footer is included&ndash;&gt;-->
-<!--<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>-->
+<!--<div data-th-replace="~{fragments/footer :: footerFragment}"></div>-->
 <!--&lt;!&ndash;script is included&ndash;&gt;-->
-<!--<script data-th-replace="~{fragments/script :: scriptFragment}"></script>-->
+<!--<div data-th-replace="~{fragments/script :: scriptFragment}"></div>-->
 <!--</body>-->
 <!--</html>-->
 
