--- a/src/main/resources/templates/payment/payment-detail.html
+++ b/src/main/resources/templates/payment/payment-detail.html
@@ -93,9 +93,9 @@
 <!--</div>-->
 
 <!--&lt;!&ndash;footer is included&ndash;&gt;-->
-<!--<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>-->
+<!--<div data-th-replace="~{fragments/footer :: footerFragment}"></div>-->
 <!--&lt;!&ndash;script is included&ndash;&gt;-->
-<!--<script data-th-replace="~{fragments/script :: scriptFragment}"></script>-->
+<!--<div data-th-replace="~{fragments/script :: scriptFragment}"></div>-->
 <!--</body>-->
 <!--</html>-->
 
@@ -179,8 +179,8 @@
     <div class="col-sm-1"></div>
 </div>
 <!--footer is included-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+<div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script is included-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 </body>
 </html>
