--- a/src/main/resources/templates/school/addSchool.html
+++ b/src/main/resources/templates/school/addSchool.html
@@ -24,12 +24,13 @@
 
 <div class="container">
     <form action="/school/save" data-th-object="${school}" method="post">
-        <div class="form-group">
+        <div class="form-group" data-th-if="${addStatus==false}">
             <label class="col-sm-3 control-label" data-th-for="${classReferance}">School ID</label>
             <div class="col-sm-9">
                 <input type="text" data-th-field="*{id}" id="schoolId" placeholder="School ID" class="form-control" autofocus>
             </div>
         </div>
+
         <div class="form-group">
             <label data-th-for="${name}" class="col-sm-3 control-label">School Name</label>
             <div class="col-sm-9">
