--- a/src/main/resources/templates/student/student-detail.html
+++ b/src/main/resources/templates/student/student-detail.html
@@ -246,7 +246,7 @@
 
         <div class="row container-fluid">
             <div class="col-sm-2 col-sm-offset-2">
-                <a href="/discount">
+                <a href="/school">
                     <button type="link"  class="btn btn-danger btn-block" >Back</button>
                 </a>
             </div>
@@ -256,8 +256,8 @@
     <div class="col-sm-1"></div>
 </div>
 <!--footer is included-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+<div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script is included-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 </body>
 </html>
