--- a/src/main/resources/templates/subject/subject-detail.html
+++ b/src/main/resources/templates/subject/subject-detail.html
@@ -67,9 +67,9 @@
 <!--</div>-->
 
 <!--&lt;!&ndash;footer is included&ndash;&gt;-->
-<!--<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>-->
+<!--<div data-th-replace="~{fragments/footer :: footerFragment}"></div>-->
 <!--&lt;!&ndash;script is included&ndash;&gt;-->
-<!--<script data-th-replace="~{fragments/script :: scriptFragment}"></script>-->
+<!--<div data-th-replace="~{fragments/script :: scriptFragment}"></div>-->
 <!--</body>-->
 <!--</html>-->
 
@@ -135,8 +135,8 @@
     <div class="col-sm-1"></div>
 </div>
 <!--footer is included-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+<div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script is included-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 </body>
 </html>
