--- a/src/main/resources/templates/timeTable/timeTable-detail.html
+++ b/src/main/resources/templates/timeTable/timeTable-detail.html
@@ -78,8 +78,8 @@
 </div>
 
 <!--footer is included-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+<div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script is included-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 </body>
 </html>
