--- a/src/main/resources/templates/student/student-detail.html
+++ b/src/main/resources/templates/student/student-detail.html
@@ -221,7 +221,7 @@
         <div class="form-group">
             <label data-th-for="${school}" class="col-sm-3 control-label">School</label>
             <div class="col-sm-6">
-                <p type="text" id="school" class="form-control" data-th-text="*{studentDetail.school}">
+                <p type="text" id="school" class="form-control" data-th-text="*{studentDetail.school.name}">
             </div>
         </div>
         <div class="form-group">
