Hall was uodated

--- a/src/main/resources/templates/hall/addHall.html
+++ b/src/main/resources/templates/hall/addHall.html
@@ -1,104 +1,3 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--&lt;!&ndash;Styles, meta data, and title are included&ndash;&gt;-->
-<!--<head data-th-replace="~{fragments/header :: headerFragment}">-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Thymeleaf Springboot </title>-->
-<!--</head>-->
-<!--<body>-->
-<!--&lt;!&ndash;Nav bar is included&ndash;&gt;-->
-<!--<nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>-->
-
-<!--<div class="page-wrapper bg-gra-02 p-t-130 p-b-100 font-poppins">-->
-<!--    <div class="wrapper wrapper&#45;&#45;w680">-->
-<!--        <div class="card card-4">-->
-<!--            <div class="card-body">-->
-<!--                <div class="col-8">-->
-<!--                    <a href="/hall">-->
-<!--                        <h2 class="title">Hall Management</h2>-->
-<!--                    </a>-->
-<!--                </div>-->
-
-<!--                <div class="col-4">-->
-<!--                    <a href="/hall">-->
-<!--                        <button class="btn btn-primary">All Hall</button>-->
-<!--                    </a>-->
-<!--                </div>-->
-<!--                <form action="/hall/save" data-th-object="${hall}" method="post">-->
-<!--                    <div class="row row-space">-->
-<!--                        <div class="form-row text-right" data-th-if="${addStatus==false}">-->
-<!--                            <div class="col-md-4">-->
-<!--                                <label data-th-for="${id}">Hall ID</label>-->
-<!--                            </div>-->
-<!--                            <div class="col-md-8">-->
-<!--                                <input class="form-control" data-th-field="*{id}" readonly type="text">-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="row row-space">-->
-<!--                        <div class="col-2">-->
-<!--                            <div class="input-group">-->
-<!--                                <label class="label form-row text-right" data-th-for="${number}">Hall Number</label>-->
-<!--                                <input class="input&#45;&#45;style-4 form-control"  data-th-field="*{number}" type="text" name="Hall Number">-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="row row-space">-->
-<!--                        <div class="col-2">-->
-<!--                            <div class="input-group">-->
-<!--                                <label class="label form-row text-right" data-th-for="${seatCount}">Seat Count</label>-->
-<!--                                <input class="input&#45;&#45;style-4 form-control"  data-th-field="*{seatCount}"type="text" name="first_name">-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="row row-space">-->
-<!--                        <div class="col-2">-->
-<!--                            <div class="input-group">-->
-<!--                                <label class="label form-row text-right" data-th-for="${hallCondition}">Hall Condition</label>-->
-<!--                                <select name="cars" class="custom-select">-->
-<!--                                    <option selected>Select the hall Condition</option>-->
-<!--                                    <option value="ac">A/C</option>-->
-<!--                                    <option value="nonAc">Non-A/C</option>-->
-<!--                                </select>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="row row-space">-->
-<!--                        <div class="col-2">-->
-<!--                            <div class="input-group">-->
-<!--                                <label class="label form-row text-right" data-th-for="${hallLocation}">Hall Location</label>-->
-<!--                                <select name="location" class="custom-select">-->
-<!--                                    <option selected>Select the floor</option>-->
-<!--                                    <option value="1st">First floor</option>-->
-<!--                                    <option value="2nd">Second floor</option>-->
-<!--                                    <option value="3rd">Third floor</option>-->
-<!--                                    <option value="4th">Fourth floor</option>-->
-<!--                                </select>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--            </div>-->
-<!--            <div class="p-t-15">-->
-<!--                <button class="btn btn&#45;&#45;radius-2 btn&#45;&#45;blue" type="submit">Submit</button>-->
-<!--            </div>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--&lt;!&ndash; Jquery JS&ndash;&gt;-->
-<!--<script src="vendor/jquery/jquery.min.js"></script>-->
-<!--&lt;!&ndash; Vendor JS&ndash;&gt;-->
-<!--<script src="vendor/select2/select2.min.js"></script>-->
-<!--<script src="vendor/datepicker/moment.min.js"></script>-->
-<!--<script src="vendor/datepicker/daterangepicker.js"></script>-->
-
-<!--&lt;!&ndash; Main JS&ndash;&gt;-->
-<!--<script src="js/global.js"></script>-->
-
-<!--</body>-->
-<!--</html>-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -130,7 +29,16 @@
             <label class="col-sm-3 control-label" data-th-for="${number}">Hall ID</label>
             <div class="col-sm-5">
                 <input type="text" data-th-field="*{number}" id="hallId" placeholder="Hall Number" class="form-control" autofocus>
+                <input type="text" data-th-if="${addStatus==false}" data-th-field="*{id}" id="id" placeholder="Hall Number" class="form-control" autofocus hidden>
+                <input type="text" data-th-if="${addStatus==false}" data-th-field="*{liveDead}" i placeholder="Hall Number" class="form-control" autofocus hidden>
+
             </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label" data-th-for="${number}">Hall Name</label>
+            <div class="col-sm-5">
+                <input type="text" data-th-field="*{name}"  placeholder="Hall Name" class="form-control" autofocus>
+                 </div>
         </div>
         <div class="form-group">
             <label class="col-sm-3 control-label" data-th-for="${seatCount}">Seating Count</label>
@@ -141,10 +49,18 @@
         <div class="form-group">
             <label class="col-sm-3 control-label" data-th-for="${hallCondition}">Hall Condition</label>
             <div class="col-sm-5">
-                <select id="hallCondition" class="form-control" data-th-field="*{hallCondition}">
-                    <option value="A/C">Air Conditioned</option>
-                    <option value="Non-A/C">Non A/C</option>
-                </select>
+                <div class="custom-control custom-checkbox custom-control-inline "
+                     data-th-each="hallCondition,index : ${hallConditions}">
+                    <input class="custom-control-input gender" required
+                           data-th-name="${'hallCondition'}"
+                           data-th-value="${hallCondition}"
+                           data-th-id="${index.index}+${hallCondition}" type="radio"
+                           data-th-checked="${hallCondition==hallCondition}"/>
+                    <label class="custom-control-label"
+                           data-th-for="${index.index}+${hallCondition}"
+                           data-th-text="${hallCondition.hallCondition}"> radio
+                    </label>
+                </div>
             </div>
         </div>
         <div class="form-group">
