--- a/src/main/resources/templates/hall/hall.html
+++ b/src/main/resources/templates/hall/hall.html
@@ -43,7 +43,7 @@
             <tr data-th-each="hall, index : ${halls}">
                 <!--                <td data-th-text="${hall.id}"></td>-->
                 <td data-th-text="${hall.number}"></td>
-                <td data-th-text="${hall.hallCondition}"></td>
+                <td data-th-text="${hall.hallCondition.hallCondition}"></td>
                 <td data-th-text="${hall.seatCount}"></td>
                 <td data-th-text="${hall.HallLocation}"></td>
                 <td>
