--- a/src/main/resources/templates/hall/hall-detail.html
+++ b/src/main/resources/templates/hall/hall-detail.html
@@ -39,11 +39,16 @@
             <div class="col-sm-6">
                 <p type="text" id="number" class="form-control" data-th-text="*{hallDetail.number}">
             </div>
+        </div><div class="form-group">
+        <label data-th-for="${number}" class="col-sm-3 control-label">Hall Name</label>
+        <div class="col-sm-6">
+            <p type="text" id="name" class="form-control" data-th-text="*{hallDetail.name}">
         </div>
+    </div>
         <div class="form-group">
             <label data-th-for="${hallCondition}" class="col-sm-3 control-label">Hall Condition</label>
             <div class="col-sm-6">
-                <p type="text" id="hallCondition" class="form-control" data-th-text="*{hallDetail.hallCondition}">
+                <p type="text" id="hallCondition" class="form-control" data-th-text="*{hallDetail.hallCondition.hallCondition}">
             </div>
         </div>
         <div class="form-group">
