Batch was uodated

--- a/src/main/resources/templates/batch/addBatch.html
+++ b/src/main/resources/templates/batch/addBatch.html
@@ -33,6 +33,7 @@
       <div class="col-md-8" >
         <label >
           <input class="form-control" data-th-field="*{id}" readonly type="text" >
+          <input class="form-control" data-th-field="*{liveDead}" readonly type="hidden" >
         </label >
       </div >
     </div >
