--- a/src/main/resources/templates/timeTable/addTimeTable.html
+++ b/src/main/resources/templates/timeTable/addTimeTable.html
@@ -30,6 +30,7 @@
             </div>
             <div class="col-md-8">
                 <input class="form-control" data-th-field="*{id}" readonly type="text">
+                <input class="form-control" data-th-field="*{liveDead}" readonly type="hidden">
             </div>
         </div>
         <!--Slot ID-->
@@ -65,30 +66,50 @@
                       data-th-if="${#fields.hasErrors('time')}">Error Name</span>
             </div>
         </div>
-
         <!--Teacher-->
         <div class="form-row text-right">
             <div class="col-md-4">
                 <label class="control-label" data-th-for="${teacher}">Teacher :</label>
             </div>
             <div class="col-md-8">
-                <input class="form-control" data-th-field="*{teacher}" required tabindex="4" type="text"/>
+                <select class="form-control" data-th-field="*{teacher}" required  >
+                    <option value="" >Please Select</option >
+                    <option data-th-each="teacher : ${teachers}"
+                    data-th-value="${teacher.id}"
+                    data-th-text="${teacher.name}"></option >
+                </select >
                 <span data-th-errors="*{teacher}"
                       data-th-if="${#fields.hasErrors('teacher')}">Error Name</span>
             </div>
         </div>
-
+        <!--batch-->
+        <div class="form-row text-right">
+            <div class="col-md-4">
+                <label class="control-label" data-th-for="${teacher}">Batch :</label>
+            </div>
+            <div class="col-md-8">
+                <select class="form-control" data-th-field="*{batch}" required  >
+                    <option value="" >Please Select</option >
+                    <option data-th-each="batch : ${batches}"
+                            data-th-value="${batch.id}"
+                            data-th-text="${batch.name}"></option >
+                </select >
+                <span data-th-errors="*{teacher}"
+                      data-th-if="${#fields.hasErrors('teacher')}">Error Name</span>
+            </div>
+        </div>
         <!--Hall Number-->
         <div class="form-row text-right">
             <div class="col-md-4">
-                <label class="control-label" data-th-for="${hallNumber}">hallNumber :</label>
+                <label class="control-label" data-th-for="${hall}">Hall :</label>
             </div>
             <div class="col-md-8">
-                <input class="form-control" data-th-field="*{hallNumber}" required tabindex="4" type="text"/>
-                <span data-th-errors="*{hallNumber}"
-                      data-th-if="${#fields.hasErrors('hallNumber')}">Error Name</span>
+                <input class="form-control" data-th-field="*{hall}" required tabindex="4" type="text"/>
+                <span data-th-errors="*{hall}"
+                      data-th-if="${#fields.hasErrors('hall')}">Error Name</span>
             </div>
         </div>
+
         <!--Button-->
         <div class="form-batch col-md-12 col-sm-12 text-center flex-column ">
             <button class="btn btn-success" tabindex="21" type="submit">
