Several changes were done

--- a/src/main/resources/templates/batch/addBatch.html
+++ b/src/main/resources/templates/batch/addBatch.html
@@ -81,9 +81,9 @@
       </div >
     </div >
     <div class="form-group" >
-      <label data-th-for="${subjectName}" class="col-sm-3 control-label" >Subject Name</label >
+      <label data-th-for="${subject}" class="col-sm-3 control-label" >Subject Name</label >
       <div class="col-sm-9" >
-        <select id="subjectName" class="form-control" data-th-field="*{subject}" >
+        <select id="subject" class="form-control" data-th-field="*{subject}" >
           <option value="" >Select the Subject</option >
           <option data-th-each="subject : ${subjects}"
                   data-th-text="${subject.name}"
