--- a/src/main/resources/templates/student/addStudent.html
+++ b/src/main/resources/templates/student/addStudent.html
@@ -33,6 +33,7 @@
       <label class="col-sm-2 control-label" data-th-for="${regNo}" >Registration ID</label >
       <div class="col-sm-5" >
         <input type="text" id="regNo" class="form-control" data-th-field="*{regNo}" >
+        <input type="text"  class="form-control" data-th-field="*{liveDead}" hidden>
       </div >
     </div >
     <div class="form-group" >
